// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag > should match snapshot - colour aqua-green 1`] = `
<strong
  class="nhsuk-tag  nhsuk-tag--aqua-green"
  data-testid="tag"
>
  Tag
</strong>
`;

exports[`Tag > should match snapshot - colour blue 1`] = `
<strong
  class="nhsuk-tag  nhsuk-tag--blue"
  data-testid="tag"
>
  Tag
</strong>
`;

exports[`Tag > should match snapshot - colour green 1`] = `
<strong
  class="nhsuk-tag  nhsuk-tag--green"
  data-testid="tag"
>
  Tag
</strong>
`;

exports[`Tag > should match snapshot - colour grey 1`] = `
<strong
  class="nhsuk-tag  nhsuk-tag--grey"
  data-testid="tag"
>
  Tag
</strong>
`;

exports[`Tag > should match snapshot - colour orange 1`] = `
<strong
  class="nhsuk-tag  nhsuk-tag--orange"
  data-testid="tag"
>
  Tag
</strong>
`;

exports[`Tag > should match snapshot - colour pink 1`] = `
<strong
  class="nhsuk-tag  nhsuk-tag--pink"
  data-testid="tag"
>
  Tag
</strong>
`;

exports[`Tag > should match snapshot - colour purple 1`] = `
<strong
  class="nhsuk-tag  nhsuk-tag--purple"
  data-testid="tag"
>
  Tag
</strong>
`;

exports[`Tag > should match snapshot - colour red 1`] = `
<strong
  class="nhsuk-tag  nhsuk-tag--red"
  data-testid="tag"
>
  Tag
</strong>
`;

exports[`Tag > should match snapshot - colour undefined 1`] = `
<strong
  class="nhsuk-tag  nhsuk-tag--grey"
  data-testid="tag"
>
  Tag
</strong>
`;

exports[`Tag > should match snapshot - colour white 1`] = `
<strong
  class="nhsuk-tag  nhsuk-tag--white"
  data-testid="tag"
>
  Tag
</strong>
`;

exports[`Tag > should match snapshot - colour yellow 1`] = `
<strong
  class="nhsuk-tag  nhsuk-tag--yellow"
  data-testid="tag"
>
  Tag
</strong>
`;
